fix: remove width constraints from GiftCollectionCard and adjust grid alignment in GiftsCollectionGrid

--- a/src/components/common/GiftsCollectionGrid/GiftCollectionCard/GiftCollectionCard.module.scss
+++ b/src/components/common/GiftsCollectionGrid/GiftCollectionCard/GiftCollectionCard.module.scss
@@ -4,8 +4,6 @@
 .root {
   background: $bg-static;
   border-radius: 16px;
-  width: 100%;
-  max-width: 181px;
   height: 100%;
   display: flex;
   flex-direction: column;
