--- a/src/components/common/GiftsCollectionGrid/GiftsCollectionGrid.module.scss
+++ b/src/components/common/GiftsCollectionGrid/GiftsCollectionGrid.module.scss
@@ -19,6 +19,4 @@
   grid-template-columns: repeat(auto-fill, minmax(145px, 1fr));
   gap: 8px;
   width: 100%;
-  align-items: stretch;
-  justify-content: flex-start;
 }
